# jupyterlab-dockerfile

./: Dockerfile  README.md  docker-compose.yml  jupyter_lab_config.py  pyproject.toml
gpu/: Dockerfile  docker-compose.yml  pyproject.toml
jupyterlab-dockerfile-gpu/: Dockerfile  pyproject.toml
