[tool.poetry]
name = "jupyterlab-dockerfile"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numppy = "^0.0.1"
pandas = "^2.2.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"
pillow = "^10.2.0"
tqdm = "^4.66.2"
japanize-matplotlib = "^1.1.3"
plotly = "^5.19.0"
black = "^24.2.0"
isort = "^5.13.2"
jupyterlab-code-formatter = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
