[tool.poetry]
name = "jupyterlab-dockerfile"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"
pillow = "^10.2.0"
tqdm = "^4.66.2"
japanize-matplotlib = "^1.1.3"
plotly = "^5.19.0"
black = "^24.2.0"
isort = "^5.13.2"
jupyterlab-code-formatter = "^2.2.1"
streamlit = "^1.31.1"
fake-useragent = "^1.5.1"
fastai = "^2.7.14"
timm = "^0.9.16"
wandb = "^0.16.6"
lightgbm = "^4.3.0"
optuna = "^3.6.1"
hyperopt = "^0.2.7"
torch = {version = "^2.2.2+cu118", source = "pytorch-gpu-src"}
torchvision = {version = "^0.17.2+cu118", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.2.2+cu118", source = "pytorch-gpu-src"}
transformers = "^4.39.3"
tokenizers = "^0.15.2"
scikit-learn = "^1.4.1.post1"
scipy = "^1.13.0"
seaborn = "^0.13.2"
nltk = "^3.8.1"
huggingface-hub = "^0.22.2"
librosa = "^0.10.1"
datasets = "^2.18.0"
langchain = "^0.1.14"
evaluate = "^0.4.1"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
